reduce size of + sign to 30px to fix downwards shift from the center

--- a/src/components/hours/PlusButtonTool.css
+++ b/src/components/hours/PlusButtonTool.css
@@ -8,7 +8,7 @@
 }
 
 .c-plus-button-tool div{
-    font-size: 40px;
+    font-size: 30px;
     color: white;
     margin: auto;
 }
